--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,26 @@
-apscheduler==3.10.4
-deep-translator
-pyromod
-openai
 aiofiles
-aiohttp
-asyncio
+aiohttp==3.10.0
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3
-httpx[http2.27.2]
-httpcore==1.0.6
+heroku3==5.1.4
+httpx[http2]==0.27.2
 lyricsgenius
-motor==2.5.0
-wget
-pillow==9.5.0
-pymongo==3.12.0
-pytz==2023.3.post1
+motor
+ntgcalls
+pillow
 psutil
-pytube
+py-tgcalls==2.0.6
 pykeyboard
-pyshorteners
-unidecode
-pyromod
-py-tgcalls==1.2.9
-ntgcalls==1.1.2
-Abg==2.3.1
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
-urllib3
-uvloop
-flask
-urllib3==2.2.3
-gunicorn==20.1.0
+https://github.com/rojvv/tgcrypto/archive/main.zip
+unidecode
 yt-dlp==2024.11.18
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
-git+https://github.com/joetats/youtube_search@master
-git+https://github.com/badmunda98/yt-search-python@main
+youtube-search-python
