--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
 aiofiles
-aiohttp==3.10.0
+aiohttp
+asyncio
 beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
-heroku3==5.1.4
-httpx[http2]==0.27.2
-lyricsgenius
+heroku3
 motor
-ntgcalls
 pillow
 psutil
-py-tgcalls==2.0.6
+py-tgcalls==0.9.7
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.32.zip
+pyrogram==2.0.106
 python-dotenv
 pyyaml
 requests
 speedtest-cli
 spotipy
-https://github.com/rojvv/tgcrypto/archive/main.zip
+tgcrypto
 unidecode
-yt-dlp==2024.11.18
+yt-dlp
+youtube-search
 youtube-search-python
